<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32px"
            android:text="Tabelas e Resultados"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_athletics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32px"
                android:layout_marginTop="32px"
                android:layout_marginRight="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_athletics" />

            <Button
                android:id="@+id/bt_basketball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_basketball" />

            <Button
                android:id="@+id/bt_soccer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32px"
                android:layout_marginTop="32px"
                android:layout_marginRight="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_soccer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_athletics_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_basketball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_soccer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel3"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_futsal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32px"
                android:layout_marginTop="32px"
                android:layout_marginRight="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_futsal" />

            <Button
                android:id="@+id/bt_handball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_handball" />

            <Button
                android:id="@+id/bt_judo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32px"
                android:layout_marginTop="32px"
                android:layout_marginRight="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_judo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_futsal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_handball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel5"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_judo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel6"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_swimming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32px"
                android:layout_marginTop="32px"
                android:layout_marginRight="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_swimming" />

            <Button
                android:id="@+id/bt_table_tennis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_table_tennis" />

            <Button
                android:id="@+id/bt_volleyball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32px"
                android:layout_marginTop="32px"
                android:layout_marginRight="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_volleyball" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_swimming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel7"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_table_tennis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel8"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_volleyball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel9"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_beach_volleyball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32px"
                android:layout_marginTop="32px"
                android:layout_marginRight="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_beach_volleyball" />

            <Button
                android:id="@+id/bt_chess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                android:layout_weight="0"
                android:background="@mipmap/ic_chess" />

            <Button
                android:id="@+id/bt_invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32px"
                android:layout_marginTop="32px"
                android:layout_marginRight="32px"
                android:layout_weight="0"
                android:text="Button"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_beach_volleyball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel10"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_chess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/channel11"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>